[package]
name = "rusty-port-scanner"
version = "0.1.0"
authors = ["Connor Mooney-Collett <connor.mooneycollett@gmail.com>"]
edition = "2018"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.14.0"
clap = "2.33.1"
